# NLP118

./: 36118at2-eda.ipynb  Data cleaning+EDA.ipynb  EDA.ipynb  README.md  app.py  index.html  main.py  pyproject.toml  readme.md  readme.md.txt  requirements.txt  vector.py
LLM/LLM/: LLM_FROMhuggingface.PY
Notebook/: Data Exploration.ipynb  Merge Dataset.ipynb
WebApp/: .env  How To.txt  agent.py  app.py  gen-lang-client-0184211067-8d635d347db2.json  requirements.txt
WebApp/.ipynb_checkpoints/: agent-checkpoint.py
en/Sentiment Classification/: main.py
en/keywords/: main.py
models/LLM/LLM/: LLM_FROMhuggingface.PY  REMEMBER_LLM.py
models/en/Sentiment Classification/: main.py
models/en/keywords/: main.py
notebook/: empathetic_data_cleaning.ipynb
